[gd_scene load_steps=5 format=3 uid="uid://cjsn0w3obsi1e"]

[ext_resource type="Script" path="res://src/BLL/Scripts/Humans/NPCs/NPCs.gd" id="1_5tlra"]
[ext_resource type="Texture2D" uid="uid://dtwke7v68y8eh" path="res://img/NPCs/Characters_V3_Colour.png" id="1_f2h7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxbyy"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_58mw8"]
radius = 64.0

[node name="NPCs" type="StaticBody2D"]
script = ExtResource("1_5tlra")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_f2h7v")
hframes = 10
vframes = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pxbyy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_58mw8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hoimau" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -116.5
offset_right = 293.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="Yes" type="Button" parent="CanvasLayer/Hoimau"]
layout_mode = 0
offset_left = 401.5
offset_top = 145.5
offset_right = 511.5
offset_bottom = 206.5
text = "300 xu"

[node name="No" type="Button" parent="CanvasLayer/Hoimau"]
layout_mode = 0
offset_left = 80.5
offset_top = 145.5
offset_right = 190.5
offset_bottom = 206.5
text = "No"

[node name="Label" type="Label" parent="CanvasLayer/Hoimau"]
layout_mode = 0
offset_left = 191.5
offset_top = 59.5
offset_right = 403.5
offset_bottom = 82.5
text = "Hồi máu cho tất cả PokeBin"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer/Hoimau/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer/Hoimau/No" to="." method="_on_no_pressed"]
